update api and openapi spec
